--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -62,6 +62,14 @@
     }
 }
 
+.h5 {
+    @apply text-xl font-normal;
+
+    @screen md {
+        @apply text-3xl;
+    }
+}
+
 .h6 {
     @apply text-xl font-medium;
 
