--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -25,7 +25,7 @@
 
 /* Structure */
 .col-2-wrapper {
-    @apply grid;
+    @apply grid items-start;
 
     @screen md {
         @apply grid-cols-2 gap-24;
