add work animations

--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -13,6 +13,7 @@
 @import "../components/Form/Form.css";
 @import "../components/Buttons/Button.css";
 @import "../components/Footer/Footer.css";
+@import "../components/Sections/Works/Works.css";
 
 /* Themes */
 .theme-dark {
