--- a/src/components/Blocks/Work/Work.css
+++ b/src/components/Blocks/Work/Work.css
@@ -59,4 +59,13 @@
             @apply flex flex-col gap-1;
         }
     }
+
+    a {
+        text-decoration: underline 0.25rem rgba(0, 0, 0, 0);
+        transition: text-decoration-color 300ms;
+    }
+
+    a:hover {
+        text-decoration-color: rgba(0, 0, 0, 1);
+    }
 }
